# libe-community-examples

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
1_vtmop/: vtmop.py
ax-multitask/: test_persistent_gp_multitask_ax.py
cnn_comparator/: README.md  pytorch_cnn_NCCL_parallel.py  pytorch_cnn_NCCL_with_DDP.py  simf_cnn_NCCL_parallel.py
consensus/: persistent_independent_optimize.py  persistent_n_agent.py  test_persistent_independent.py  test_persistent_n_agent.py  test_persistent_pds.py  test_persistent_prox_slide.py
consensus/gens/: persistent_independent_optimize.py  persistent_n_agent.py  persistent_pds.py  persistent_prox_slide.py
deap/: deap_nsga2.yaml  persistent_deap_nsga2.py  test_deap_nsga2.py
docs/: conf.py  generators.rst  index.rst  simulators.rst
gen_updates_cnn/: .gitignore  README.md  generator.py  pixi.toml  pyproject.toml  run_libe_cnn.py  simulator.py
gen_updates_cnn/gen_updates_cnn/: generator.py  simulator.py  utils.py
gen_updates_cnn/gen_updates_cnn/mnist/: nn.py  nn_ddp.py
gen_updates_cnn/mnist/: nn.py  run_libe_cnn.py
heffte_ytopt/heffte/: test_heffte.py
heffte_ytopt/ytopt_heffte/: test_ytopt_heffte.py  ytopt_asktell.py
parmoo-emittance/: README.rst  REQUIREMENTS.txt  accelerator_model.py  libe_parmoo_accelerator_solver.py  parmoo_accelerator_structured_solver.py  parmoo_libe_accelerator_solver.py
rnn/: calling_script.py  load_data.py  simulator.py  submit-script.sh  test_training_args.npz  train.py  training_dependencies.py
tte/: cleanup.sh  run_libE_trajectory.py  tte.py
vtmop/: Makefile  test_vtmop.py  vtmop.py  vtmop_init.py
vtmop/src/: fmodpy_simplified_vtmop_libe.f90  vtmop.f90  vtmop_libe.f90
warpx/: all_machine_specs.py  read_sim_output.py  readme.txt  run_libensemble_on_warpx.py  warpx_simf.py  write_sim_input.py
warpx/sim/: inputs
warpx_new/: read_sim_output.py  run_libensemble_on_warpx.py  warpx_simf.py
warpx_new/sim/: inputs  inputs_test_2d_laser_acceleration_boosted
