[project]
authors = [{name = "Jeffrey Larson"}, {name = "Stephen Hudson"},
            {name = "Stefan M. Wild"}, {name = "David Bindel"},
            {name = "John-Luke Navarro"}]

description = "libEnsemble community examples"
name = "libe-community-examples"
requires-python = ">=3.9"
version = "0.1.0"
readme = "README.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pip>=24.3.1,<25"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
libe_community_examples = { path = ".", editable = true }

[tool.pixi.environments]
default = []

[tool.pixi.dependencies]
python = ">=3.9,<3.14"
libensemble = ">=1.4.3,<2"
sphinx = ">=8.1.3,<9"
sphinxcontrib-bibtex = ">=2.6.3,<3"
ipykernel = ">=6.29.5,<7"
sphinx_rtd_theme = ">=3.0.1,<4"
