[project]
authors = [{name = "libEnsemble Users"}]

description = "libEnsemble community examples"
name = "libe-community-examples"
requires-python = ">=3.9"
version = "0.1.0"
readme = "README.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "pip"]

[tool.setuptools]
py-modules = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
libe_community_examples = { path = ".", editable = true }

[tool.pixi.environments]
default = []

[tool.pixi.dependencies]
python = "==3.10"
sphinxcontrib-bibtex = ">=2.6.3,<3"
ipykernel = ">=6.29.5,<7"
sphinx_rtd_theme = ">=3.0.1,<4"
pandas = ">=2.2.3,<3"
libensemble = ">=1.4.3,<2"
pip = ">=24.3.1,<25"
sphinx = ">=7.4.7,<8"
ax-platform = "==0.4.0"
yt = ">=4.4.0,<5"
warpx = ">=25.2,<26"
numpy = ">=2.2.4,<3"
sphinx-design = ">=0.6.1,<0.7"

[tool.pixi.tasks.build-docs]
cmd = "cd docs && make html"

[tool.pixi.tasks.clean]
cmd = "rm -rf ensemble.log *.pickle *.npy libE_stats.txt"

[tool.pixi.target.osx-arm64.dependencies]
libgfortran = ">=5.0.0,<6"
libgfortran5 = ">=13.2.0,<14"
openblas = ">=0.3.29,<0.4"
